[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta" 

[project]
name = "dewan_sniffing"
version = "0.1.0"
description = "Python package to analyze sniffing data collected in the Dewan Lab"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Austin Pauley", email = "pauley@psy.fsu.edu" }]

dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "dewan_h5>=1.1.0",
    "tqdm"
]

[project.optional-dependencies]
jupyter = ["jupyter"]



[project.urls]
"Homepage" = "https://github.com/olfactorybehaviorlab/sniffing_dynamics"

[tool.setuptools]
packages=['sniffing']

# The following would provide a command line executable called `sample`
# which executes the function `main` from this package when invoked.
[project.scripts]
sniffing_analysis = "sniffing.__main__:main"

